Stopped tile title from sticking out of tile container by adding padding-enforcer div

--- a/public/styles.css
+++ b/public/styles.css
@@ -79,6 +79,10 @@ h6.panel-title {
     cursor: pointer;
 }
 
+.padding-enforcer {
+    position: relative;
+}
+
 .tile-title {
     position: absolute;
     top: 0; left:0; right:0;
